--- a/resources/fxmls/MainMenuSample.fxml
+++ b/resources/fxmls/MainMenuSample.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" stylesheets="@SnakeStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.enw.games.snake.gui.MainMenu">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" stylesheets="@SnakeStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.enw.games.snake.gui.MainMenuController">
    <children>
       <ImageView fx:id="theAmazingSnakeImg" fitHeight="524.0" fitWidth="400.0" layoutX="150.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../resources/theAmazingSnake.jpg" />
+            <Image url="@/images/theAmazingSnake.jpg" />
          </image>
       </ImageView>
       <Button fx:id="newGameButton" layoutX="350.0" layoutY="221.0" mnemonicParsing="false" onAction="#handleNewGame" prefHeight="30.0" prefWidth="163.0" text="Start New Game" wrapText="true" />
