--- a/resources/fxmls/MainMenu.fxml
+++ b/resources/fxmls/MainMenu.fxml
@@ -8,7 +8,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" stylesheets="@SnakeStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.enw.games.snake.gui.MainMenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" 
+minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" 
+prefWidth="700.0" stylesheets="@/styles/SnakeStyle.css" 
+xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" 
+fx:controller="com.enw.games.snake.gui.MainMenuController">
    <children>
       <ImageView fx:id="theAmazingSnakeImg" fitHeight="524.0" fitWidth="400.0" layoutX="150.0" pickOnBounds="true" preserveRatio="true">
          <image>
