--- a/resources/fxmls/NewGame.fxml
+++ b/resources/fxmls/NewGame.fxml
@@ -12,40 +12,41 @@
 			prefWidth="700.0" 
 			xmlns="http://javafx.com/javafx/8" 
 			xmlns:fx="http://javafx.com/fxml/1" 
-			stylesheets="@/styles/SnakeStyle.css"
+			stylesheets="@/styles/main.css"
 			fx:controller="com.enw.games.snake.gui.controllers.NewGameController">
 			
    <children>
-   
+   	 
+      <ChoiceBox fx:id="gameBoardTypeChoiceBox" 
+      		  	 layoutX="280" 
+      		  	 layoutY="210" 
+      			 prefHeight="30.0" 
+      			 prefWidth="163.0" />
+      			 
       <Button fx:id="startGameButton" 
       		  onAction="#startNewGame" 
-      		  layoutX="219.0" 
-      		  layoutY="192.0" 
+      		  layoutX="280" 
+      		  layoutY="260" 
       		  mnemonicParsing="false" 
       		  prefHeight="30.0" 
       		  prefWidth="163.0" 
       		  text="Start Game" />
-      		  
-      <ChoiceBox fx:id="boardSizeChoiceBox" 
-      			 layoutX="219.0" 
-      			 layoutY="126.0" 
-      			 prefHeight="30.0" 
-      			 prefWidth="163.0" />
-      			 
+
       <Button fx:id="backButton" 
       		  onAction="#goBack" 
-      		  layoutX="219.0" 
-      		  layoutY="255.0" 
+      		  layoutX="280" 
+      		  layoutY="310" 
       		  mnemonicParsing="false" 
       		  prefHeight="30.0" 
       		  prefWidth="163.0" 
       		  text="Back" />
       		  
-      <Label fx:id="emptyBoardSizeWarning" 
-      		 layoutX="389.0" 
-      		 layoutY="126.0" 
+      <Label fx:id="warningLabel" 
+      		 layoutX="260" 
+      		 layoutY="350" 
       		 prefHeight="30.0" 
-      		 prefWidth="163.0" />
+      		 prefWidth="250" />
+      		 
    </children>
    
 </AnchorPane>
